k8s/07-order-entry-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-entry-service
  namespace: hft
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-entry-service
  template:
    metadata:
      labels:
        app: order-entry-service
    spec:
      containers:
        - name: order-entry-service
          image: hft-trading-platform-order-entry-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-entry-service
  namespace: hft
spec:
  selector:
    app: order-entry-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30085
  type: NodePort
